<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity">

    <TextView
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_flag_quiz"/>

    <com.google.android.material.card.MaterialCardView
       android:layout_width="350dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       app:cardBackgroundColor="@color/white"
       app:cardCornerRadius="10dp"
       app:cardElevation="10dp"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:orientation="vertical"
           android:layout_margin="20dp"
           >
           <TextView
               android:textSize="34sp"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/welcome"/>
           <TextView
               android:textSize="16sp"
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:text="@string/please_enter_your_name"/>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:hint="@string/name"
               app:boxCornerRadiusBottomEnd="10dp"
               app:boxCornerRadiusBottomStart="10dp"
               app:boxCornerRadiusTopEnd="10dp"
               app:boxCornerRadiusTopStart="10dp"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               >

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/name_et"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:imeOptions="actionGo"
                   android:inputType="textCapWords"
                   android:textColorHint="#757575"
                   android:textSize="16sp" />
           </com.google.android.material.textfield.TextInputLayout>
           <Button
               android:textSize="16sp"
               android:id="@+id/start_btn"
               android:padding="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:text="@string/start"
               android:backgroundTint="@color/tcu_purple"
               app:cornerRadius="0dp"/>

       </LinearLayout>
   </com.google.android.material.card.MaterialCardView>

</LinearLayout>