<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/what_country_does_this_flag_belong_to"/>

        <ImageView android:id="@+id/flag_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/flag_image"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                style="?android:attr/progressBarStyleHorizontal"/>

            <TextView
                android:textSize="16sp"
                android:gravity="end"
                android:id="@+id/progress_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/option_ll"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <Button
            android:textSize="16sp"
            android:id="@+id/submit_btn"
            android:padding="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:backgroundTint="@color/tcu_purple"
            app:cornerRadius="0dp"/>

    </LinearLayout>
</ScrollView>
